--- a/data/spells/necromancy-01-Zmh4ynfnCtwKeAYl.htm
+++ b/data/spells/necromancy-01-Zmh4ynfnCtwKeAYl.htm
@@ -1,7 +1,6 @@
 Name: Heal Animal
 Nom: Guérison des animaux
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You heal an animal's wounds, restoring 1d8 Hit Points to the target. The number of actions spent Casting this Spell determines its effect.</p>
@@ -14,8 +13,8 @@ Nom: Guérison des animaux
 ------ Description (fr) ------
 <p>Vous soignez les blessures de l’animal ciblé qui récupère 1d8 points de vie. Le nombre d’actions dépensées pour Lancer ce sort détermine son effet. </span></p>
 <ul>
-<li><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">1</span> <strong>(somatique)</strong> Le sort a une portée de contact.</li>
-<li><span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">2</span> <strong>(somatique, verbal)</strong> Le sort a une portée de 9 m et permet à la cible de récupérer 8 points de vie supplémentaires.</li>
+<li><span class="pf2-icon">1</span> <strong>somatique</strong> Le sort a une portée de contact.</li>
+<li><span class="pf2-icon">2</span> <strong>somatique, verbal</strong> Le sort a une portée de 9 m et permet à la cible de récupérer 8 points de vie supplémentaires.</li>
 </ul>
 <hr />
 <p><strong>Intensifié (+1)</strong> Le montant des soins augmente de 1d8 et les soins supplémentaires de la version à 2 actions augmentent de 8.</p>
