--- a/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
+++ b/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
@@ -114,102 +114,104 @@ Nom: Création de mort-vivant
 ------ Description (fr) ------
 <p>Vous transformez la cible en mort-vivant d’un niveau maximum égal à celui autorisé dans le tableau suivant. Il existe de nombreuses versions de ce rituel dont chacune permet la transformation en un type de mort-vivant particulier (un rituel pour tous les zombies, un pour les squelettes, un pour les goules, etc.), et les rituels de création des morts-vivants rares sont eux aussi rares. Certains morts-vivants, tels que les liches, sont créés par le biais d’autres méthodes uniques en leur genre et ne peuvent donc pas être créés avec une version de création de mort-vivant.</p>
 <h2>Tableau des Rituels de création de créature</h2>
-<table style="width: 379px; user-select: text; color: #191813; font-size: 13px; height: 353px;" border="1">
-<tbody style="box-sizing: border-box; user-select: text;">
-<tr style="box-sizing: border-box; user-select: text; height: 25px;">
-<td style="box-sizing: border-box; user-select: text; color: white; height: 17px; width: 103px; text-align: center; background-color: #522e2c;"><strong>Niveau de la créature</strong></td>
-<td style="box-sizing: border-box; user-select: text; color: white; width: 165px; text-align: center; background-color: #522e2c; height: 17px;"><strong>Niveau de sort nécessaire</strong></td>
-<td style="box-sizing: border-box; user-select: text; color: white; width: 110px; text-align: center; background-color: #522e2c; height: 17px;"><strong>Coût</strong></td>
+<table class="pf2-table">
+<thead>
+<tr>
+<th><strong>Niveau de la créature</strong></th>
+<th><strong>Niveau de sort requis</strong></th>
+<th><strong>Coût</strong></th>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 103px; text-align: center; background-color: #f6f1e1;"><span>-1 ou 0</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 17px;"><span style="box-sizing: border-box; user-select: text; display: block;">2</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 17px;"><span>15 po</span></td>
+</thead>
+<tbody>
+<tr>
+<td>-1 ou 0</td>
+<td>2</td>
+<td>15 po</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 103px; text-align: center; background-color: #eee5c8;"><span>1</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 17px;">2<span style="box-sizing: border-box; user-select: text; display: block;"></span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 17px;"><span>60 po</span></td>
+<tr>
+<td>1</td>
+<td>2</td>
+<td>60 po</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 103px; text-align: center; background-color: #f6f1e1;">2</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 17px;"><span style="box-sizing: border-box; user-select: text; display: block;">3</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 17px;"><span>105 po</span></td>
+<tr>
+<td>2</td>
+<td>3</td>
+<td>105 po</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 19px;">
-<td style="box-sizing: border-box; user-select: text; height: 19px; width: 103px; text-align: center; background-color: #eee5c8;">3</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">3</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>180 po</span></td>
+<tr>
+<td>3</td>
+<td>3</td>
+<td>180 po</td>
 </tr>
-<tr style="height: 19px; background-color: #f6f1e1;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">4</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">4</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>300 po</span></td>
+<tr>
+<td>4</td>
+<td>4</td>
+<td>300 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">5</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">4</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>480 po</span></td>
+<tr>
+<td>5</td>
+<td>4</td>
+<td>480 po</td>
 </tr>
-<tr style="height: 19px; background-color: #f6f1e1;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">6</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">5</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>750 po</span></td>
+<tr>
+<td>6</td>
+<td>5</td>
+<td>750 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">7</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">5</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>1.080 po</span></td>
+<tr>
+<td>7</td>
+<td>5</td>
+<td>1 080 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">8</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">6</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>1.500 po</span></td>
+<tr>
+<td>8</td>
+<td>6</td>
+<td>1 500 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">9</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">6</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>2.100 po</span></td>
+<tr>
+<td>9</td>
+<td>6</td>
+<td>2 100 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">10</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">7</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>3.000 po</span></td>
+<tr>
+<td>10</td>
+<td>7</td>
+<td>3 000 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">11</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">7</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>4.200 po</span></td>
+<tr>
+<td>11</td>
+<td>7</td>
+<td>4 200 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">12</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">8</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>6.000 po</span></td>
+<tr>
+<td>12</td>
+<td>8</td>
+<td>6 000 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">13</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">8</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>9.000 po</span></td>
+<tr>
+<td>13</td>
+<td>8</td>
+<td>9 000 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">14</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">9</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>13.500 po</span></td>
+<tr>
+<td>14</td>
+<td>9</td>
+<td>13 500 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">15</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">9</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>19.500 po</span></td>
+<tr>
+<td>15</td>
+<td>9</td>
+<td>19 500 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #f6f1e1; height: 19px;">16</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #f6f1e1; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">10</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #f6f1e1; height: 19px;"><span>30.000 po</span></td>
+<tr>
+<td>16</td>
+<td>10</td>
+<td>30 000 po</td>
 </tr>
-<tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 103px; text-align: center; background-color: #eee5c8; height: 19px;">17</td>
-<td style="box-sizing: border-box; user-select: text; width: 165px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="box-sizing: border-box; user-select: text; display: block;">10</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 110px; text-align: center; background-color: #eee5c8; height: 19px;"><span>45.000 po</span></td>
+<tr>
+<td>17</td>
+<td>10</td>
+<td>45 000 po</td>
 </tr>
 </tbody>
 </table>
