--- a/data/spells/necromancy-02-RGBZrVRIEDb2G48h.htm
+++ b/data/spells/necromancy-02-RGBZrVRIEDb2G48h.htm
@@ -1,7 +1,6 @@
 Name: Soothing Mist
 Nom: Brume apaisante
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You call forth a magical mist of positive energy that envelops a creature.</p>
@@ -10,6 +9,6 @@ Nom: Brume apaisante
 <hr />
 <p><strong>Heightened (+1)</strong> The amount of healing (or damage to an undead target) increases by [[/r 1d8]], and the persistent positive damage to an undead creature increases by [[/r 1]].</p>
 ------ Description (fr) ------
-<p>Vous invoquez une brume magique d'énergie positive qui enveloppe une créature. La brume restaure [[/r 2d8]] Points de Vie à une cible vivante et mettez un terme à une source de dégâts persistants d'acide, de saignement, de feu, négatifs ou de poison l'affectant. Si la créature a subi des dégâts persistants de sources multiples, vous sélectionnez celle qui cesse. Contre une cible morte-vivante, vous lui infligez [[/r 2d8 #positifs]] dégâts positifs (jet de Vigueur basique) ; si elle obtient un échec au jet de sauvegarde, elle subit aussi [[/r 2 #positifs persistants]] dégâts positifs persistants.</p>
+<p>Vous invoquez une brume magique d'énergie positive qui enveloppe une créature. La brume restaure [[/r 2d8]] points de vie sur une cible vivante et met un terme à une source de dégâts persistants d'acide, de saignement, de feu, négatifs ou de poison qui l'affecte. Si la créature a subi des dégâts persistants de sources multiples, vous sélectionnez celle qui cesse. Contre une cible morte-vivante, vous lui infligez [[/r 2d8 #positifs]] dégâts positifs (jet de Vigueur basique) ; si elle obtient un échec au jet de sauvegarde, elle subit aussi [[/r 2 #positifs persistants]] dégâts positifs persistants.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> Le montant des soins (ou des dégâts infligés aux cibles mortes-vivantes) augmente de [[/r 1d8]] et les dégâts d'énergie positive persistants à la créature morte-vivante augmentent de [[/r 1]].</p>
+<p><strong>Intensifié (+1)</strong> Le montant des soins (ou des dégâts infligés à une cible morte-vivante) augmente de [[/r 1d8]] et les dégâts d'énergie positive persistants à la créature morte-vivante augmentent de [[/r 1]].</p>
