--- a/data/spells/necromancy-02-oryfsRK27jAUnziw.htm
+++ b/data/spells/necromancy-02-oryfsRK27jAUnziw.htm
@@ -1,7 +1,6 @@
 Name: Imp Sting
 Nom: Dard de diablotin
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You reproduce an imp's evil, poisonous sting, stabbing at an enemy and possibly affecting them with the devil's benumbing venom. You deal [[/r 1d4 #piercing]] piercing damage to the touched creature and afflict the creature with imp venom. If the target takes piercing damage, they also take [[/r 1d6 #evil]] evil damage and must attempt a Fortitude save.</p>
@@ -11,7 +10,7 @@ Nom: Dard de diablotin
 <p><strong>Failure</strong> The target is afflicted with Imp Venom at stage 1.</p>
 <p><strong>Critical Failure</strong> The target is afflicted with imp venom at stage 2.</p>
 <hr />
-<p><strong>Imp Venom</strong> (poison) <strong>Level 3</strong></p>
+<p><strong>Imp Venom</strong> (poison) <strong>Level 3</strong> ;</p>
 <p><strong>Maximum Duration</strong> 6 rounds</p>
 <p><strong>Stage 1</strong> [[/r 1d6 #poison]] poison and @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy 1}</p>
 <p><strong>Stage 2</strong> [[/r 1d6 #poison]] poison, @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy 1}, and @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Slowed 1} (1 round).</p>
