--- a/data/spells/necromancy-03-ziHDISWkFSwz3pmn.htm
+++ b/data/spells/necromancy-03-ziHDISWkFSwz3pmn.htm
@@ -1,7 +1,6 @@
 Name: Delay Affliction
 Nom: Retarder l'affliction
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>With a surge of healing energy, you push back against an affliction threatening the target and grant a small amount of healing. The target recovers 3d8 Hit Points.</p>
@@ -10,7 +9,6 @@ Nom: Retarder l'affliction
 <hr />
 <p><strong>Heightened (+1)</strong> The target recovers an additional 1d8 Hit Points and you can attempt to suspend an additional affliction.</p>
 ------ Description (fr) ------
-<p>Avec une vague d'énergie guérisseuse, vous repoussez une affliction menaçant la cible et lui accordez un peu de soins.</p>
-<p>La cible récupère [[/r 3d8]] Points de vie. Vous tentez de contrer n'importe quelle affliction dont vous savez que la cible souffre, suspendant ses effet pendant 1 heure sur un succès au lieu de l'en délivrer. La cible est alors temporairement immuniser à <em>Retarder l'affliction</em> pendant 1 journée. Vous n'avez pas besoi d'voir identifié le nom de l'affliction particulière, mais vous avez besoin d'en être conscient ; par exemple, vous ne pourriez retarder un poison ingéré durant sa période d'incubation à moins d'être conscient du poison.</p>
+<p>Avec une vague d'énergie guérisseuse, vous repoussez une affliction menaçant la cible et lui accordez un petit montant de soins. La cible récupère [[/r 3d8]] Points de vie. Vous tentez de contrer n'importe quelle affliction dont vous savez que la cible souffre, suspendant ses effet pendant 1 heure sur un succès au lieu de l'en délivrer. La cible est alors temporairement immuniser à Retarder l'affliction pendant 1 journée. Vous n'avez pas besoin d'avoir identifié le nom de l'affliction particulière, mais vous avez besoin d'en être conscient ; par exemple, vous ne pourriez retarder un poison ingéré durant sa période d'incubation à moins d'être conscient de l'existence du poison.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> La cible récupère [[/r 1d8]] Points de vie supplémentaires et vous pouvez tenter de suspendre une affliction supplémentaire.</p>
