--- a/data/spell-effects/06-l8HkOKfiUqd3BUwT.htm
+++ b/data/spell-effects/06-l8HkOKfiUqd3BUwT.htm
@@ -1,6 +1,6 @@
 Name: Spell Effect: Ancestral Form
 Nom: Effet : Forme ancestrale
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p>Granted by @Compendium[pf2e.spells-srd.xEjGEBvTfDJECSki]{Ancestral Form}</p>
