--- a/data/spell-effects/04-R27azQfzeFuFc48G.htm
+++ b/data/spell-effects/04-R27azQfzeFuFc48G.htm
@@ -1,6 +1,6 @@
 Name: Spell Effect: Take Its Course (Affliction, Hinder)
 Nom: Effet : Suivre son cours (Affliction, entraver)
-État: Libre
+État: libre
 
 ------ Description (en) ------
 <p>Granted by @Compendium[pf2e.spells-srd.ZeHeNQ5BNq6m5F1j]{Take its Course}, when used to hinder a target against an affliction.</p>
