--- a/data/spells/abjuration-01-0uRpypf1Hi7ahvTl.htm
+++ b/data/spells/abjuration-01-0uRpypf1Hi7ahvTl.htm
@@ -7,6 +7,6 @@ Nom: Gemme explosive
 <hr />
 <p><strong>Heightened (+1)</strong> The gem has 5 additional HP, and the damage dealt by its detonation increases by 1d8.</p>
 ------ Description (fr) ------
-<p>Une grande gemme flotte autour de la cible selon un schéma erratique. La gemme possède 5 Points de vie. Chaque fois qu'une créature Frappe la cible, la cible fait un test nu DD 11. En cas de succès, la gemme bloque l'attaque, de sorte que l'attaque cause d'abord des dégâts à la gemme puis applique tous les éventuels dégâts restants à la cible. Si la gemme est réduite à 0 Points de vie, elle explose, infligeant immédiatement à la créature qui l'a détruite 1d8 dégâts tranchants (Jet de Réflexes basique), tant que la créature est à moins de 3 m de la cible.</p>
+<p>Une grande gemme flotte autour de la cible selon un schéma erratique. La gemme possède 5 Points de vie. Chaque fois qu'une créature Frappe la cible, la cible fait un test nu DD 11. En cas de succès, la gemme bloque l'attaque, de sorte que l'attaque cause d'abord des dégâts à la gemme puis applique tous les éventuels dégâts restants à la cible. Si la gemme est réduite à 0 Points de vie, elle explose, infligeant immédiatement à la créature qui l'a détruite 1d8 dégâts tranchants (Jet de Réflexes basique), tant que la créature est à moins de 3 mètres de la cible.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> La gemme possède 5 Points de vie supplémentaires et les dégats infligés par sa détonation augmentent de 1d8.</p>
+<p><strong>Intensifié (+1)</strong> La gemme possède 5 Points de vie supplémentaires et les dégâts infligés par sa détonation augmentent de 1d8.</p>
