--- a/data/spells/abjuration-00-RA7VKcen3p56rVyZ.htm
+++ b/data/spells/abjuration-00-RA7VKcen3p56rVyZ.htm
@@ -10,6 +10,6 @@ Nom: Sceau d'interdiction
 ------ Description (fr) ------
 <p>Vous protégez un allié contre les attaques et les sorts hostiles de la cible ennemie.</p>
 <p>La cible alliée gagne un bonus de statut de +1 à la CA et aux jets de sauvegarde contre les attaques, les sorts et autres effets de la cible ennemie.</p>
-<p>@Compendium[pf2e.spell-effects.ctMxYPGEpstvhW9C]{Effet de sort : Sceau d'interdiction}</p>
+<p>@Compendium[pf2e.spell-effects.ctMxYPGEpstvhW9C]{Effet : Sceau d'interdiction}</p>
 <hr />
 <p><strong> Intensifié (6e)</strong> Le bonus de statut passe à +2.</p>
