--- a/data/ancestries/vxbQ1Yw4qwgjTzqo.htm
+++ b/data/ancestries/vxbQ1Yw4qwgjTzqo.htm
@@ -1,6 +1,6 @@
 Name: Gnoll
-Nom: 
-État: aucune
+Nom: Gnoll
+État: libre
 
 ------ Description (en) ------
 <p><em>Powerfully-built humanoids that resemble hyenas, gnolls are cunning warriors and hunters. Their frightening visage and efficient tactics have given them an ill-starred reputation.</em></p>
@@ -34,3 +34,33 @@ Nom:
 <h3>Sample Names</h3>
 <p>Baobab, Jackal, Onyx Elephant in Shadows, Red Thorn, Unbent Iron Reed, White Acacia, Wistful Tooth, Woodpecker</p>
 ------ Description (fr) ------
+</p><em>Humanoïdes puissamment bâtis qui ressemblent à des hyènes, les gnolls sont des guerriers et des chasseurs rusés. Leur visage effrayant et leurs tactiques efficaces leur ont valu une réputation peu enviable.</em></p>.
+<hr />
+<p>Dans les terres situées à l'est, comme le Katapesh, les gnolls se sont forgés une réputation bien méritée d'esclavagistes brutaux et d'adorateurs de démons. Même dans l'étendue du Mwangi, de nombreux étrangers croient que les gnolls sont des sorciers, des cannibales et pire encore. La vérité est plus complexe.</p>
+</p> <p>Les gnolls du Mwangi, connus entre eux sous le nom de "kholo", sont des chasseurs et des pilleurs éminemment pratiques et pragmatiques. Pour les gnolls, l'honneur n'est qu'un autre mot pour désigner un risque inutile. Toute perte d'un gnoll n'affecte pas seulement l'individu, mais aussi ses compagnons de meute et ses proches. Perdre du temps pour autre chose que la victoire, que ce soit par pitié ou par cruauté, est presque considéré comme immoral. Les gnolls considèrent l'efficacité comme une vertu cardinale et pensent que le meilleur combat est celui qui ne donne jamais à l'adversaire l'occasion de répliquer. Les gnolls du Mwangi sont des maîtres de l'embuscade, de la feinte tactique et de la guerre psychologique - ce qui n'a rien pour les rendre sympathiques à leurs voisins.</p>
+<p>Tout aussi incomprise est la pratique gnoll du culte des ancêtres et de l'endocannibalisme. Les gnolls consomment leurs morts en signe de respect, organisant un grand festin et ils transforment les os des morts en objets d'art ou en armes. Les gnolls étendent cet honneur à des ennemis respectés, dans l'espoir d'apporter la ruse ou la force de leur ennemi au clan. Bien qu'il s'agisse d'un signe d'admiration, tout le monde ne voit pas cette pratique du même œil.</p>
+<h2>Vous...</h2>
+<ul>
+<li>Essayez toujours de travailler plus intelligemment, mais pas plus durement.</li>
+<li>Êtes très démonstratif physiquement - en étreignant, en frappant ou en léchant souvent vos amis.</li>
+<li>Conservez un os d'un parent révéré pour lui demander conseil.</li>
+</ul>
+<h2>Les autres...</h2>
+<ul>
+<li>Sont intimidés par votre taille, vos dents et votre rire lugubre.</li>
+<li>Supposent que vous êtes dépourvu d'honneur ou pire encore.</li>
+<li>Respectent l'efficacité brutale de votre style de chasse.</li>
+</ul>
+<h2>Description physique</h2>
+<p>Les gnolls sont de grands humanoïdes ressemblant à des hyènes, dotés d'un museau court, de dents acérées et de grandes oreilles rondes et expressives. Leur corps est recouvert d'une fourrure hirsute, plus rêche sur le dos et plus douce et claire sur le ventre et la gorge, généralement dans une nuance blanc cassé, beige ou marron - les taches et les rayures sont toutes deux courantes. Les gnolls mesurent généralement entre 1,80 et 2,50 mètres. Les femmes sont généralement plus grandes d'une tête que les hommes et donc plus fortes. Les gnolls sont considérés comme des adultes à quinze ans et vivent environ 60 ans en moyenne, bien que certains puissent atteindre la centaine ou plus en bonne santé.</p>
+<h2>Société</h2>
+<p>Les kholos vivent généralement en clans composés de 10 à 20 groupes familiaux interdépendants, contenant entre 100 et 200 gnolls. Ils sont dirigés par un conseil de femmes gnolls, généralement sélectionnées parmi les membres les plus âgées de chaque famille. Ce conseil des anciens choisit l'un d'entre eux comme chef des anciens, qui est essentiellement le premier parmi ses égaux et qui fixe l'ordre du jour. Le conseil est conseillé par le gardien des os et le conteur du clan, ainsi que par un ou plusieurs gnolls plus jeunes qui dirigent des meutes de chasseurs et de pilleurs.</p>
+<p>Les gardiens des os se concentrent sur le respect des souhaits des ancêtres et des dieux gnolls - ils tirent leur nom des ossements ancestraux qui ornent leurs vêtements et leurs maisons. Les conteurs servent d'enseignants et de sages et sont censés avoir une connaissance encyclopédique de l'histoire du clan, de la région et de tout ce qui concerne le clan. Ils parlent généralement plusieurs langues.</p>
+<p>Les femmes kholo travaillent généralement comme chasseuses, guerrières et chefs, tandis que les hommes deviennent artisans, soigneurs et cueilleurs. Cependant, l'adhésion aux rôles de genre varie d'un clan à l'autre. Les membres de l'un ou l'autre sexe peuvent devenir des gardiens des os ou des conteurs, et ces postes mènent souvent à l'autorité pour les gnolls masculins.</p>
+<h2>Alignement et religion</h2>
+<p>Les gnolls du Mwangi ont une approche de la vie peu sentimentale et terre à terre et privilégient les résultats à la méthode. Ils sont généralement loyaux et généreux envers leur peuple et impitoyables envers les étrangers - les gnolls sont typiquement chaotiques neutres, mais peuvent dévier vers le bien ou le mal en fonction de ceux qu'ils considèrent comme "leur peuple". </p>
+<p>Les gnolls font appel à leurs ancêtres au quotidien, invoquant leurs proches pour bénir les petits, éloigner les maladies ou accorder de la chance pour la chasse. Les gnolls font appel aux dieux lors d'occasions spéciales ou en cas de grande crise. La plupart des kholos rendent hommage à Calistria et Shélyn, les sœurs aînées et jeunes, déesses jumelles du pouvoir et de la beauté. Néthys, le Frère, est le patron des gardiens des os et Lamashtu, bien qu'étant une divinité populaire dans d'autres sociétés gnolls, est conciliée comme la Vieille Mère, une déesse à laquelle on ne fait appel qu'en tout dernier recours, et qu'on prie sinon de rester à l'écart.</p>
+<h2>Noms</h2>
+<p>Les kholos nouveau-nés reçoivent un nom racine, généralement celui d'un os, d'une plante ou d'un animal (mais jamais la hyène, car cela est considéré comme narcissique et arrogant). Lorsqu'un gnoll atteint certaines étapes de sa vie, il ajoute des descripteurs à son nom. Les noms racines sont souvent transmis par les familles, tandis que les descripteurs sont choisis en fonction de la personnalité du gnoll, généralement lors de cérémonies tapageuses.</p>
+<h3>Exemples de noms</h3>
+<p>Baobab, Chacal, Onyx Éléphant des ombres, Épine rouge, Reed acier non plié, Acacia blanc, Dent souhaitable, Pivert</p>
